--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,7 @@ plugins {
 rootProject.name = 'Stirling-PDF'
 
 include 'common', 'enterprise'
+
+//if (System.getenv('DOCKER_ENABLE_SECURITY') == 'true') {
+//    include 'enterprise'
+//}
