--- a/build.gradle
+++ b/build.gradle
@@ -51,44 +51,15 @@ sourceSets {
     main {
         java {
             if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
-                exclude "stirling/software/SPDF/config/security/**"
-                exclude "stirling/software/SPDF/controller/api/DatabaseController.java"
-                exclude "stirling/software/SPDF/controller/api/UserController.java"
-                exclude "stirling/software/SPDF/controller/api/H2SQLCondition.java"
-                exclude "stirling/software/SPDF/controller/web/AccountWebController.java"
-                exclude "stirling/software/SPDF/controller/web/DatabaseWebController.java"
-                exclude "stirling/software/SPDF/model/ApiKeyAuthenticationToken.java"
-                exclude "stirling/software/SPDF/model/AttemptCounter.java"
-                exclude "stirling/software/SPDF/model/Authority.java"
-                exclude "stirling/software/SPDF/model/BackupNotFoundException.java"
-                exclude "stirling/software/SPDF/model/PersistentLogin.java"
-                exclude "stirling/software/SPDF/model/SessionEntity.java"
-                exclude "stirling/software/SPDF/model/User.java"
-                exclude "stirling/software/SPDF/repository/**"
-            }
-
-            if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
-                exclude "stirling/software/SPDF/UI/impl/**"
-            }
-
-        }
-    }
-
-    test {
-        java {
-            if (System.getenv("DOCKER_ENABLE_SECURITY") == "false") {
-                exclude "stirling/software/SPDF/config/security/**"
-                exclude "stirling/software/SPDF/controller/api/UserControllerTest.java"
-                exclude "stirling/software/SPDF/controller/api/DatabaseControllerTest.java"
-                exclude "stirling/software/SPDF/controller/web/AccountWebControllerTest.java"
-                exclude "stirling/software/SPDF/controller/web/DatabaseWebControllerTest.java"
-                exclude "stirling/software/SPDF/model/ApiKeyAuthenticationTokenTest.java"
-                exclude "stirling/software/SPDF/model/AttemptCounterTest.java"
-                exclude "stirling/software/SPDF/model/AuthorityTest.java"
-                exclude "stirling/software/SPDF/model/PersistentLoginTest.java"
-                exclude "stirling/software/SPDF/model/SessionEntityTest.java"
-                exclude "stirling/software/SPDF/model/UserTest.java"
-                exclude "stirling/software/SPDF/repository/**"
+                exclude 'stirling/software/enterprise/security/controller/**'
+                exclude 'stirling/software/enterprise/security/model/ApiKeyAuthenticationToken.java'
+                exclude 'stirling/software/enterprise/security/model/AttemptCounter.java'
+                exclude 'stirling/software/enterprise/security/model/Authority.java'
+                exclude 'stirling/software/enterprise/security/model/BackupNotFoundException.java'
+                exclude 'stirling/software/enterprise/security/model/PersistentLogin.java'
+                exclude 'stirling/software/enterprise/security/model/SessionEntity.java'
+                exclude 'stirling/software/enterprise/security/model/User.java'
+                exclude 'stirling/software/enterprise/security/database/repository/**'
             }
 
             if (System.getenv("STIRLING_PDF_DESKTOP_UI") == "false") {
@@ -419,7 +390,6 @@ configurations.all {
 
 dependencies {
     implementation project(':common')
-    implementation project(':enterprise')
 
     //tmp for security bumps
     implementation 'ch.qos.logback:logback-core:1.5.18'
@@ -431,6 +401,10 @@ dependencies {
         exclude group: 'org.bouncycastle', module: 'bcpkix-jdk15on'
         exclude group: 'org.bouncycastle', module: 'bcutil-jdk15on'
         exclude group: 'org.bouncycastle', module: 'bcmail-jdk15on'
+    }
+
+    if (System.getenv("DOCKER_ENABLE_SECURITY") == "true") {
+        implementation project(':enterprise')
     }
 
     if (System.getenv("STIRLING_PDF_DESKTOP_UI") != "false") {
@@ -451,35 +425,6 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf:$springBootVersion"
     implementation 'com.posthog.java:posthog:1.2.0'
     implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20240325.1'
-
-
-    if (System.getenv("DOCKER_ENABLE_SECURITY") != "false") {
-	    implementation 'io.micrometer:micrometer-registry-prometheus'
-
-        implementation "org.springframework.boot:spring-boot-starter-security:$springBootVersion"
-        implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.1.3.RELEASE"
-        implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion"
-        implementation "org.springframework.boot:spring-boot-starter-oauth2-client:$springBootVersion"
-
-        implementation "org.springframework.session:spring-session-core:3.4.3"
-        implementation "org.springframework:spring-jdbc:6.2.6"
-
-        implementation 'com.unboundid.product.scim2:scim2-sdk-client:2.3.5'
-        // Don't upgrade h2database
-        runtimeOnly "com.h2database:h2:2.3.232"
-        runtimeOnly "org.postgresql:postgresql:42.7.5"
-        constraints {
-            implementation "org.opensaml:opensaml-core:$openSamlVersion"
-            implementation "org.opensaml:opensaml-saml-api:$openSamlVersion"
-            implementation "org.opensaml:opensaml-saml-impl:$openSamlVersion"
-        }
-        implementation "org.springframework.security:spring-security-saml2-service-provider:$springSecuritySamlVersion"
-        // implementation 'org.springframework.security:spring-security-core:$springSecuritySamlVersion'
-        implementation 'com.coveo:saml-client:5.0.0'
-
-    }
-
-    testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
 
     // Batik
     implementation "org.apache.xmlgraphics:batik-all:1.18"
@@ -511,8 +456,6 @@ dependencies {
 
     implementation ("org.apache.pdfbox:pdfbox:$pdfboxVersion")
     implementation "org.apache.pdfbox:preflight:$pdfboxVersion"
-
-
     implementation ("org.apache.pdfbox:xmpbox:$pdfboxVersion")
 
     // https://mvnrepository.com/artifact/technology.tabula/tabula
@@ -537,6 +480,7 @@ dependencies {
     compileOnly "org.projectlombok:lombok:$lombokVersion"
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
+    testImplementation "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
     testRuntimeOnly 'org.mockito:mockito-inline:5.2.0'
 }
 
